--- a/Version3/Car.ipynb
+++ b/Version3/Car.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,13 +82,16 @@
     "    '肇因研判大類別名稱-主要',\n",
     "    # '肇因研判大類別名稱-個別',\n",
     "    \n",
-    "    '道路型態子類別名稱'\n",
+    "    # 子類別\n",
+    "    '道路型態子類別名稱', '事故位置子類別名稱', '事故類型及型態子類別名稱', '肇因研判子類別名稱-主要',\n",
+    "    '當事者區分-類別-子類別名稱-車種', '當事者行動狀態子類別名稱', '車輛撞擊部位子類別名稱-最初',\n",
+    "    '車輛撞擊部位子類別名稱-其他', '肇因研判子類別名稱-個別',\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +109,7 @@
       "40 9003\n",
       "48 10804\n",
       "[]\n",
-      "dummy_data: (95859, 160)\n"
+      "dummy_data: (95859, 471)\n"
      ]
     }
    ],
@@ -219,20 +222,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 國科會模型為O2I11，seed為87，iter=150"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./GridSearch/Component7Car/results_o2i11_new.pkl', 'rb') as f:\n",
-    "    detailed_results_df = pickle.load(f)"
+    "output_file = './Data/Mapper/driver_o2i10.pkl'\n",
+    "\n",
+    "with open(output_file, 'rb') as f:\n",
+    "    detailed_results_df = pickle.load(f)\n",
+    "\n",
+    "# with open(output_file, 'wb') as f:\n",
+    "    # pickle.dump(detailed_results_df, f)"
    ]
   },
   {
@@ -252,59 +253,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['天候名稱', '光線名稱', '道路類別-第1當事者-名稱', '速限-第1當事者', '路面狀況-路面鋪裝名稱',\n",
-       "       '路面狀況-路面狀態名稱', '路面狀況-路面缺陷名稱', '道路障礙-障礙物名稱', '道路障礙-視距品質名稱', '道路障礙-視距名稱',\n",
-       "       '號誌-號誌種類名稱', '號誌-號誌動作名稱', '車道劃分設施-分道設施-快車道或一般車道間名稱',\n",
-       "       '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱', '當事者屬-性-別名稱', '當事者事故發生時年齡',\n",
-       "       '保護裝備名稱', '行動電話或電腦或其他相類功能裝置名稱', '肇事逃逸類別名稱-是否肇逃', '道路型態大類別名稱',\n",
-       "       '事故位置大類別名稱', '車道劃分設施-分向設施大類別名稱', '事故類型及型態大類別名稱', '當事者區分-類別-大類別名稱-車種',\n",
-       "       '當事者行動狀態大類別名稱', '車輛撞擊部位大類別名稱-最初', '車輛撞擊部位大類別名稱-其他', '肇因研判大類別名稱-主要',\n",
-       "       'color_for_plot'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rbind_data.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "駕駛者    80326\n",
-       "其他     14686\n",
-       "機件       336\n",
-       "燈光       257\n",
-       "裝載       254\n",
-       "Name: 肇因研判大類別名稱-主要, dtype: int64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rbind_data['肇因研判大類別名稱-主要'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -314,10 +262,9 @@
     "for i in [35]:\n",
     "    print(f'Seed: {i}')\n",
     "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=i, iterations=100, dim=3,\n",
-    "                                   range_lst=[-0.1, 0.1, 0.1, -0.1])\n",
+    "                                   range_lst=[-0.075, 0.075, 0.06, -0.1])\n",
     "    mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
-    "    full_info = mapper_plotter.extract_data()\n",
-    "    full_info[['x', 'y', 'z']] = rotate_z(full_info[['x', 'y', 'z']], -40)\n",
+    "    full_info, label_out = mapper_plotter.extract_data(rz=-40)\n",
     "    mapper_plotter.map_colors(choose, size=15, threshold=5)\n",
     "    mapper_plotter.plot(choose, avg=False, set_label=True, size=3000)"
    ]
@@ -334,8 +281,8 @@
     "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=35, iterations=100, dim=3,\n",
     "                                range_lst=[-0.075, 0.075, 0.06, -0.1])\n",
     "mapper_plot = mapper_plotter.create_mapper_plot(choose, sum_of_data, avg=True)\n",
-    "full_info = mapper_plotter.extract_data(rz=-40)\n",
-    "mapper_plotter.map_colors(choose, size=15, threshold=5)\n",
+    "full_info, label_out = mapper_plotter.extract_data(rz=-40)\n",
+    "mapper_plotter.map_colors(choose, size=10, threshold=0)\n",
     "mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=3000, minimum_lst=[-0.025, 0.025])"
    ]
   },
@@ -351,7 +298,7 @@
     "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=35, iterations=100, dim=3,\n",
     "                                range_lst=[-0.075, 0.075, 0.06, -0.1])\n",
     "mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
-    "full_info = mapper_plotter.extract_data(rz=-40)\n",
+    "full_info, label_out = mapper_plotter.extract_data(rz=-40)\n",
     "mapper_plotter.map_colors(choose, size=15, threshold=500)\n",
     "mapper_plotter.plot(choose, avg=False, set_label=True, size=3000)"
    ]
@@ -371,15 +318,20 @@
    "source": [
     "from shapely.geometry import Point, Polygon\n",
     "\n",
-    "rectangle1 = Polygon([(-0.0069, -0.06), (-0.075, -0.06), (-0.075, 0.04), (-0.0069, 0.04)])\n",
-    "rectangle2 = Polygon([(-0.0069, -0.06), (-0.0069, 0.065), (0.07, 0.065), (0.07, -0.06)])\n",
+    "threshold = -0.002\n",
+    "x_max = 0.5\n",
+    "x_min = -0.5\n",
+    "y_max = 0.5\n",
+    "y_min = -0.5\n",
     "\n",
-    "filtered_full_info = full_info[(full_info['y'] > -0.15) &\n",
-    "                               (full_info['y'] < 0.1) &\n",
-    "                               (full_info['x'] > -0.1) &\n",
-    "                               (full_info['x'] < 0.15)]\n",
-    "filtered_full_info = filtered_full_info[filtered_full_info['size'] > 15]\n",
-    "filtered_full_info = full_info\n",
+    "rectangle1 = Polygon([(threshold, y_min), (x_min, y_min), (x_min, y_max), (threshold, y_max)])\n",
+    "rectangle2 = Polygon([(threshold, y_min), (threshold, y_max), (x_max, y_max), (x_max, y_min)])\n",
+    "\n",
+    "th = 2\n",
+    "filtered_full_info = full_info[(full_info['y'] > -th) &\n",
+    "                               (full_info['y'] < th) &\n",
+    "                               (full_info['x'] > -th) &\n",
+    "                               (full_info['x'] < th)]\n",
     "\n",
     "# 檢查每個點是否在任意一個區塊內\n",
     "inside_indices_1 = filtered_full_info.apply(lambda row: Point(row['x'], row['y']).within(rectangle1), axis=1)\n",
@@ -388,27 +340,16 @@
     "label_0 = filtered_full_info[inside_indices_1]\n",
     "label_1 = filtered_full_info[inside_indices_2]\n",
     "\n",
-    "# 提取區域內和區域外的數據\n",
-    "all_inside_indices = inside_indices_1 | inside_indices_2\n",
-    "outside_indices = ~all_inside_indices\n",
-    "\n",
-    "label_out = filtered_full_info[outside_indices]\n",
-    "\n",
-    "# assert label_0.shape[0] + label_1.shape[0] + label_out.shape[0] == filtered_full_info.shape[0]\n",
-    "\n",
     "# 繪製數據點和矩形區塊\n",
     "plt.figure(figsize=(10, 8))\n",
     "plt.scatter(label_0['x'], label_0['y'], color='green', s=10)\n",
     "plt.scatter(label_1['x'], label_1['y'], color='blue', s=10)\n",
-    "plt.scatter(label_out['x'], label_out['y'], color='red', s=10)\n",
-    "\n",
     "# 繪製矩形區塊\n",
     "for rect, color, alpha in zip([rectangle1, rectangle2], \n",
     "                              ['green', 'blue'], \n",
     "                              [0.2, 0.2]):\n",
     "    x, y = rect.exterior.xy\n",
     "    plt.fill(x, y, color=color, alpha=alpha)\n",
-    "\n",
     "# 圖形調整\n",
     "plt.xlabel(\"X\")\n",
     "plt.ylabel(\"Y\")\n",
@@ -419,18 +360,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "模型順序\n",
-    "由於1，2群體在拓樸中有過渡的性質，且是從號誌到無號誌，死亡的分布有增加的趨勢，所以使用羅吉斯 <br/>\n",
-    "3，4群體是從這兩個群體的雨天分割出來的，在分布上可看出較類似於不同群體，因為邊的連接較少，所以使用SVM <br/>\n",
-    "5、6群體是離群值以及覆蓋值，分別是群體間的不相似、相似特徵，認為在空間分布上也是類似於分群，所以使用SVM"
+    "plot_labels(label_0, label_1, label_out, title=\"Label and Outlier Visualization\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -443,6 +383,7 @@
     }
    ],
    "source": [
+    "rbind_data['死亡'] = death\n",
     "# 獲取每個label的index\n",
     "count_0 = get_unique_ids(label_0)\n",
     "count_1 = get_unique_ids(label_1)\n",
@@ -485,29 +426,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    33625\n",
-      "1      137\n",
+      "0    34237\n",
+      "1      147\n",
       "2        3\n",
       "3        1\n",
       "Name: 死亡, dtype: int64\n",
-      "0    57202\n",
-      "1      218\n",
+      "0    56610\n",
+      "1      213\n",
       "2        3\n",
       "Name: 死亡, dtype: int64\n",
-      "0    3961\n",
-      "1      47\n",
+      "0    3728\n",
+      "1      46\n",
       "2       3\n",
       "3       2\n",
       "Name: 死亡, dtype: int64\n",
-      "0    647\n",
-      "1     10\n",
+      "0    860\n",
+      "1      6\n",
       "Name: 死亡, dtype: int64\n"
      ]
     }
@@ -521,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,119 +471,6 @@
     "full_1.to_csv('./Data/DriverData/full_1.csv', index=False)\n",
     "full_out.to_csv('./Data/DriverData/full_out.csv', index=False)\n",
     "overlap_data.to_csv('./Data/DriverData/overlap_data.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "CarDataNew保存新方法的模型輸入"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "95503\n",
-      "95503\n"
-     ]
-    }
-   ],
-   "source": [
-    "from shapely.geometry import Point, Polygon\n",
-    "\n",
-    "rectangle2 = Polygon([(-0.04, -0.02), (-0.1, -0.03), (-0.1, 0),(-0.07, 0.1), (0, 0.06), (0.02, 0.04), (0.02, 0.02)])\n",
-    "rectangle3 = Polygon([(-0.04, -0.03), (-0.04, -0.02),(0.02, 0.02), (0.05, 0.05), (0.15, 0), (0.1, -0.1), (-0.065, -0.1)])\n",
-    "\n",
-    "# filtered_full_info = full_info[(full_info['y'] > -0.2) &\n",
-    "#                                (full_info['y'] < 0.1) &\n",
-    "#                                (full_info['x'] > -0.1) &\n",
-    "#                                (full_info['x'] < 0.15)]\n",
-    "# filtered_full_info = filtered_full_info[filtered_full_info['size'] > 15]\n",
-    "filtered_full_info = full_info\n",
-    "\n",
-    "# 檢查每個點是否在任意一個區塊內\n",
-    "inside_indices_2 = filtered_full_info.apply(lambda row: Point(row['x'], row['y']).within(rectangle2), axis=1)\n",
-    "inside_indices_3 = filtered_full_info.apply(lambda row: Point(row['x'], row['y']).within(rectangle3), axis=1)\n",
-    "\n",
-    "label_1 = filtered_full_info[inside_indices_2]\n",
-    "label_2 = filtered_full_info[inside_indices_3]\n",
-    "\n",
-    "# 提取區域內和區域外的數據\n",
-    "all_inside_indices =  inside_indices_2 | inside_indices_3\n",
-    "outside_indices = ~all_inside_indices\n",
-    "\n",
-    "label_out = filtered_full_info[outside_indices]\n",
-    "\n",
-    "# # 繪製數據點和矩形區塊\n",
-    "# plt.figure(figsize=(10, 8))\n",
-    "# plt.scatter(label_1['x'], label_1['y'], color='blue', s=10)\n",
-    "# plt.scatter(label_2['x'], label_2['y'], color='purple', s=10)\n",
-    "# plt.scatter(label_out['x'], label_out['y'], color='red', s=10)\n",
-    "\n",
-    "# # 繪製矩形區塊\n",
-    "# for rect, color, alpha in zip([rectangle2, rectangle3], \n",
-    "#                               ['blue', 'purple'], \n",
-    "#                               [0.2, 0.2]):\n",
-    "#     x, y = rect.exterior.xy\n",
-    "#     plt.fill(x, y, color=color, alpha=alpha)\n",
-    "\n",
-    "# # 圖形調整\n",
-    "# plt.xlabel(\"X\")\n",
-    "# plt.ylabel(\"Y\")\n",
-    "# plt.legend()\n",
-    "# plt.grid(True)\n",
-    "# plt.axis(\"equal\")\n",
-    "# plt.show()\n",
-    "\n",
-    "# 獲取每個label的index\n",
-    "count_1 = get_unique_ids(label_1)\n",
-    "count_2 = get_unique_ids(label_2)\n",
-    "count_out = get_unique_ids(label_out)\n",
-    "\n",
-    "index_to_groups = {}\n",
-    "\n",
-    "# 將索引與群體的關係記錄下來\n",
-    "for group_name, group_indexes in zip(\n",
-    "    [\"full_1\", \"full_2\", \"full_out\"],\n",
-    "    [count_1, count_2, count_out],\n",
-    "):\n",
-    "    for idx in group_indexes:\n",
-    "        if idx not in index_to_groups:\n",
-    "            index_to_groups[idx] = set()\n",
-    "        index_to_groups[idx].add(group_name)\n",
-    "\n",
-    "# 找交集索引\n",
-    "intersection_indexes = {idx for idx, groups in index_to_groups.items() if len(groups) > 1}\n",
-    "\n",
-    "# 移除交集的index\n",
-    "count_1 = [i for i in count_1 if i not in intersection_indexes]\n",
-    "count_2 = [i for i in count_2 if i not in intersection_indexes]\n",
-    "count_out = [i for i in count_out if i not in intersection_indexes]\n",
-    "\n",
-    "# 分群處理\n",
-    "full_1 = rbind_data.loc[count_1]\n",
-    "full_2 = rbind_data.loc[count_2]\n",
-    "full_out = rbind_data.loc[count_out]\n",
-    "overlap_data = rbind_data.loc[list(intersection_indexes)]\n",
-    "\n",
-    "# 確認所有資料都被獲取\n",
-    "assert len(count_1) == full_1.shape[0]\n",
-    "assert len(count_2) == full_2.shape[0]\n",
-    "assert len(count_out) == full_out.shape[0]\n",
-    "\n",
-    "print(full_1.shape[0] + full_2.shape[0] + full_out.shape[0] + overlap_data.shape[0])\n",
-    "print(rbind_data.shape[0])\n",
-    "\n",
-    "full_1.to_csv('./Data/CarDataNew/full_1.csv', index=False)\n",
-    "full_2.to_csv('./Data/CarDataNew/full_2.csv', index=False)\n",
-    "full_out.to_csv('./Data/CarDataNew/full_out.csv', index=False)\n",
-    "overlap_data.to_csv('./Data/CarDataNew/overlap_data.csv', index=False)"
    ]
   },
   {
