--- a/Version3/Pass.ipynb
+++ b/Version3/Pass.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,13 +85,16 @@
     "    '肇因研判大類別名稱-主要',\n",
     "    # '肇因研判大類別名稱-個別',\n",
     "    \n",
-    "    '道路型態子類別名稱'\n",
+    "    # 子類別\n",
+    "    '道路型態子類別名稱', '事故位置子類別名稱', '事故類型及型態子類別名稱', '肇因研判子類別名稱-主要',\n",
+    "    '當事者區分-類別-子類別名稱-車種', '當事者行動狀態子類別名稱', '車輛撞擊部位子類別名稱-最初',\n",
+    "    '車輛撞擊部位子類別名稱-其他', '肇因研判子類別名稱-個別',\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +102,7 @@
      "output_type": "stream",
      "text": [
       "['行動電話或電腦或其他相類功能裝置名稱', '當事者區分-類別-大類別名稱-車種', '車輛撞擊部位大類別名稱-最初']\n",
-      "dummy_data: (3143, 128)\n"
+      "dummy_data: (3143, 210)\n"
      ]
     }
    ],
@@ -228,17 +231,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = './Gridsearch/Component12Pass/results_o3i7.pkl'\n",
+    "output_file = './Data/Mapper/pass_o3i7.pkl'\n",
     "\n",
-    "# with open(output_file, 'rb') as f:\n",
-    "#     detailed_results_df = pickle.load(f)\n",
+    "with open(output_file, 'rb') as f:\n",
+    "    detailed_results_df = pickle.load(f)\n",
     "    \n",
-    "with open(output_file, 'wb') as f:\n",
-    "    pickle.dump(detailed_results_df, f)"
+    "# with open(output_file, 'wb') as f:\n",
+    "#     pickle.dump(detailed_results_df, f)"
    ]
   },
   {
@@ -290,9 +293,9 @@
     "rbind_data['死亡'] = death\n",
     "\n",
     "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=87, iterations=100, dim=2,\n",
-    "                                range_lst=[-0.125, 0.125, 0.25, -0.25])\n",
+    "                                range_lst=[-0.2, 0.2, 0.2, -0.2])\n",
     "mapper_plot = mapper_plotter.create_mapper_plot(choose, sum_of_data, avg=True)\n",
-    "full_info = mapper_plotter.extract_data()\n",
+    "full_info, label_out = mapper_plotter.extract_data()\n",
     "mapper_plotter.map_colors(choose, size=0, threshold=0)\n",
     "mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=100000, minimum_lst=[-0.05, 0.05])"
    ]
@@ -312,16 +315,20 @@
    "source": [
     "from shapely.geometry import Point, Polygon\n",
     "\n",
-    "rectangle1 = Polygon([(-0.0333, -0.15), (-0.2, -0.15), (-0.2, 0.1), (-0.0333, 0.1)])\n",
-    "rectangle2 = Polygon([(-0.0333, -0.2), (-0.0333, 0.1), (0.2, 0.1), (0.2, -0.2)])\n",
+    "threshold = -0.0328\n",
+    "x_max = 0.25\n",
+    "x_min = -0.25\n",
+    "y_max = 0.25\n",
+    "y_min = -0.25\n",
     "\n",
-    "# 限制會導致full_info的資料量減少\n",
-    "range_lst=[-0.25, 0.25, 0.25, -0.25]\n",
-    "filtered_full_info = full_info[(full_info['x'] > range_lst[0]) & \n",
-    "          (full_info['y'] < range_lst[2]) & \n",
-    "          (full_info['x'] < range_lst[1]) & \n",
-    "          (full_info['y'] > range_lst[3])]\n",
-    "filtered_full_info = full_info\n",
+    "rectangle1 = Polygon([(threshold, y_min), (x_min, y_min), (x_min, y_max), (threshold, y_max)])\n",
+    "rectangle2 = Polygon([(threshold, y_min), (threshold, y_max), (x_max, y_max), (x_max, y_min)])\n",
+    "\n",
+    "th = 2\n",
+    "filtered_full_info = full_info[(full_info['y'] > -th) &\n",
+    "                               (full_info['y'] < th) &\n",
+    "                               (full_info['x'] > -th) &\n",
+    "                               (full_info['x'] < th)]\n",
     "\n",
     "# 檢查每個點是否在任意一個區塊內\n",
     "inside_indices_1 = filtered_full_info.apply(lambda row: Point(row['x'], row['y']).within(rectangle1), axis=1)\n",
@@ -330,27 +337,17 @@
     "label_0 = filtered_full_info[inside_indices_1]\n",
     "label_1 = filtered_full_info[inside_indices_2]\n",
     "\n",
-    "# 提取區域內和區域外的數據\n",
-    "all_inside_indices = inside_indices_1 | inside_indices_2\n",
-    "outside_indices = ~all_inside_indices\n",
-    "\n",
-    "label_out = filtered_full_info[outside_indices]\n",
-    "\n",
+    "# 繪製數據點和矩形區塊\n",
     "plt.figure(figsize=(10, 8))\n",
-    "\n",
-    "# Plot points inside each polygon\n",
     "plt.scatter(label_0['x'], label_0['y'], color='green', s=10)\n",
     "plt.scatter(label_1['x'], label_1['y'], color='blue', s=10)\n",
-    "plt.scatter(label_out['x'], label_out['y'], color='red', s=10)\n",
-    "\n",
-    "# Fill polygons with semi-transparent colors\n",
+    "# 繪製矩形區塊\n",
     "for rect, color, alpha in zip([rectangle1, rectangle2], \n",
     "                              ['green', 'blue'], \n",
     "                              [0.2, 0.2]):\n",
     "    x, y = rect.exterior.xy\n",
     "    plt.fill(x, y, color=color, alpha=alpha)\n",
-    "\n",
-    "# Formatting\n",
+    "# 圖形調整\n",
     "plt.xlabel(\"X\")\n",
     "plt.ylabel(\"Y\")\n",
     "plt.legend()\n",
@@ -361,7 +358,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_labels(label_0, label_1, label_out, title=\"Label and Outlier Visualization\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -374,6 +380,7 @@
     }
    ],
    "source": [
+    "rbind_data['死亡'] = death\n",
     "# 獲取每個label的index\n",
     "count_0 = get_unique_ids(label_0)\n",
     "count_1 = get_unique_ids(label_1)\n",
@@ -416,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
