--- a/Version4/Motor.ipynb
+++ b/Version4/Motor.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,13 +86,16 @@
     "    '肇因研判大類別名稱-主要',\n",
     "    # '肇因研判大類別名稱-個別',\n",
     "    \n",
-    "    '道路型態子類別名稱'\n",
+    "    # 子類別\n",
+    "    '道路型態子類別名稱', '事故位置子類別名稱', '事故類型及型態子類別名稱', '肇因研判子類別名稱-主要',\n",
+    "    '當事者區分-類別-子類別名稱-車種', '當事者行動狀態子類別名稱', '車輛撞擊部位子類別名稱-最初',\n",
+    "    '車輛撞擊部位子類別名稱-其他', '肇因研判子類別名稱-個別',\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +113,7 @@
       "39 9884\n",
       "42 10645\n",
       "[]\n",
-      "dummy_data: (107631, 146)\n"
+      "dummy_data: (107631, 416)\n"
      ]
     }
    ],
@@ -195,7 +198,7 @@
    "outputs": [],
    "source": [
     "overlap = 2\n",
-    "interval = 9\n",
+    "interval = 10\n",
     "detailed_results = []\n",
     "silhouette_for_intervals = []\n",
     "\n",
@@ -227,17 +230,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = '../Version4/GridSearch/Component8Motor/results_o2i9.pkl'\n",
+    "output_file = './Data/Mapper/motor_o2i10.pkl'\n",
     "\n",
-    "# with open(file, 'rb') as f:\n",
-    "#     detailed_results_df = pickle.load(f)\n",
+    "with open(output_file, 'rb') as f:\n",
+    "    detailed_results_df = pickle.load(f)\n",
     "    \n",
-    "with open(file, 'wb') as f:\n",
-    "    pickle.dump(detailed_results_df, f)"
+    "# with open(output_file, 'wb') as f:\n",
+    "#     pickle.dump(detailed_results_df, f)"
    ]
   },
   {
@@ -253,32 +256,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "choose = '死亡'\n",
-    "rbind_data['死亡'] = death\n",
-    "\n",
-    "for i in [15]:\n",
-    "    print(f'Seed: {i}')\n",
-    "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=i, iterations=100,\n",
-    "                                   range_lst=[-0.06, 0.05, 0.06, -0.06], dim=3)\n",
-    "    mapper_plot = mapper_plotter.create_mapper_plot(choose, sum_of_data, avg=True)\n",
-    "    full_info = mapper_plotter.extract_data(rz=-30, ry=30)\n",
-    "    mapper_plotter.map_colors(choose, size=15, threshold=500)\n",
-    "    mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=3000, minimum_lst=[-0.025, 0.02])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "for choose in select_lst:\n",
     "    print(choose)\n",
     "    try:\n",
-    "        mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=i, iterations=100,\n",
-    "                                        range_lst=[-0.05, 0.05, 0.06, -0.06], dim=3)\n",
+    "        mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=32, iterations=50,\n",
+    "                                        range_lst=[-0.07, 0.07, 0.1, -0.1], dim=3)\n",
     "        mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
-    "        full_info = mapper_plotter.extract_data(rz=-30, ry=30)\n",
+    "        full_info = mapper_plotter.extract_data(rz=100)\n",
     "        mapper_plotter.map_colors(choose, size=15, threshold=500)\n",
     "        mapper_plotter.plot(choose, avg=False, set_label=True, size=3000)\n",
     "    except Exception as e:\n",
@@ -292,14 +276,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "choose = '死亡'\n",
+    "rbind_data['死亡'] = death\n",
+    "\n",
+    "for i in [32]:\n",
+    "    print(f'Seed: {i}')\n",
+    "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=i, iterations=50,\n",
+    "                                   range_lst=[-0.1, 0.1, 0.1, -0.1], dim=3)\n",
+    "    mapper_plot = mapper_plotter.create_mapper_plot(choose, sum_of_data, avg=True)\n",
+    "    full_info, label_out = mapper_plotter.extract_data(rz=100)\n",
+    "    mapper_plotter.map_colors(choose, size=10, threshold=0)\n",
+    "    mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=3000, minimum_lst=[-0.025, 0.05])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "choose = '顯著特徵'\n",
     "rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']\n",
     "\n",
-    "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=i, iterations=100,\n",
-    "                                range_lst=[-0.05, 0.05, 0.06, -0.06], dim=3)\n",
+    "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=32, iterations=50,\n",
+    "                                range_lst=[-0.1, 0.1, 0.1, -0.1], dim=3)\n",
     "mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
-    "full_info = mapper_plotter.extract_data(rz=-30, ry=30)\n",
-    "mapper_plotter.map_colors(choose, size=15, threshold=500)\n",
+    "full_info, label_out = mapper_plotter.extract_data(rz=100)\n",
+    "mapper_plotter.map_colors(choose, size=5, threshold=500)\n",
     "mapper_plotter.plot(choose, avg=False, set_label=True, size=3000)"
    ]
   },
@@ -311,13 +314,13 @@
    "source": [
     "choose = '天候名稱'\n",
     "\n",
-    "for i in [15]:\n",
+    "for i in [32]:\n",
     "    print(f'Seed: {i}')\n",
-    "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=i, iterations=100,\n",
-    "                                   range_lst=[-0.05, 0.05, 0.06, -0.06], dim=3)\n",
+    "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=i, iterations=50,\n",
+    "                                   range_lst=[-0.1, 0.1, 0.1, -0.1], dim=3)\n",
     "    mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
-    "    full_info = mapper_plotter.extract_data(rz=-30, ry=30)\n",
-    "    mapper_plotter.map_colors(choose, size=15, threshold=5)\n",
+    "    full_info, label_out = mapper_plotter.extract_data(rz=100)\n",
+    "    mapper_plotter.map_colors(choose, size=0, threshold=5)\n",
     "    mapper_plotter.plot(choose, avg=False, set_label=True, size=3000)"
    ]
   },
@@ -336,15 +339,20 @@
    "source": [
     "from shapely.geometry import Point, Polygon\n",
     "\n",
-    "rectangle1 = Polygon([(-0.0126, -0.075), (-0.1, -0.075),(-0.1, 0.075), (-0.0126, 0.075)])\n",
-    "rectangle2 = Polygon([(-0.0126, -0.075), (-0.0126, 0.075), (0.1, 0.075), (0.1, -0.075)])\n",
+    "threshold = 0.0299\n",
+    "x_max = 0.5\n",
+    "x_min = -0.5\n",
+    "y_max = 0.5\n",
+    "y_min = -0.5\n",
     "\n",
-    "filtered_full_info = full_info[(full_info['y'] > -0.1) &\n",
-    "                               (full_info['y'] < 0.1) &\n",
-    "                               (full_info['x'] > -0.1) &\n",
-    "                               (full_info['x'] < 0.1)]\n",
-    "filtered_full_info = filtered_full_info[filtered_full_info['size'] > 1]\n",
-    "filtered_full_info = full_info\n",
+    "rectangle1 = Polygon([(threshold, y_min), (x_min, y_min), (x_min, y_max), (threshold, y_max)])\n",
+    "rectangle2 = Polygon([(threshold, y_min), (threshold, y_max), (x_max, y_max), (x_max, y_min)])\n",
+    "\n",
+    "th = 2\n",
+    "filtered_full_info = full_info[(full_info['y'] > -th) &\n",
+    "                               (full_info['y'] < th) &\n",
+    "                               (full_info['x'] > -th) &\n",
+    "                               (full_info['x'] < th)]\n",
     "\n",
     "# 檢查每個點是否在任意一個區塊內\n",
     "inside_indices_1 = filtered_full_info.apply(lambda row: Point(row['x'], row['y']).within(rectangle1), axis=1)\n",
@@ -353,27 +361,16 @@
     "label_0 = filtered_full_info[inside_indices_1]\n",
     "label_1 = filtered_full_info[inside_indices_2]\n",
     "\n",
-    "# 提取區域內和區域外的數據\n",
-    "all_inside_indices = inside_indices_1 | inside_indices_2\n",
-    "outside_indices = ~all_inside_indices\n",
-    "\n",
-    "label_out = filtered_full_info[outside_indices]\n",
-    "\n",
-    "# assert label_0.shape[0] + label_1.shape[0] + label_out.shape[0] == filtered_full_info.shape[0]\n",
-    "\n",
     "# 繪製數據點和矩形區塊\n",
     "plt.figure(figsize=(10, 8))\n",
     "plt.scatter(label_0['x'], label_0['y'], color='green', s=10)\n",
     "plt.scatter(label_1['x'], label_1['y'], color='blue', s=10)\n",
-    "plt.scatter(label_out['x'], label_out['y'], color='red', s=10)\n",
-    "\n",
     "# 繪製矩形區塊\n",
     "for rect, color, alpha in zip([rectangle1, rectangle2], \n",
     "                              ['green', 'blue'], \n",
     "                              [0.2, 0.2]):\n",
     "    x, y = rect.exterior.xy\n",
     "    plt.fill(x, y, color=color, alpha=alpha)\n",
-    "\n",
     "# 圖形調整\n",
     "plt.xlabel(\"X\")\n",
     "plt.ylabel(\"Y\")\n",
@@ -385,7 +382,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_labels(label_0, label_1, label_out, title=\"Label and Outlier Visualization\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -398,6 +404,7 @@
     }
    ],
    "source": [
+    "rbind_data['死亡'] = death\n",
     "# 獲取每個label的index\n",
     "count_0 = get_unique_ids(label_0)\n",
     "count_1 = get_unique_ids(label_1)\n",
@@ -440,26 +447,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    38758\n",
-      "1      230\n",
+      "0    69156\n",
+      "1      313\n",
       "2        5\n",
       "Name: 死亡, dtype: int64\n",
-      "0    63094\n",
-      "1      170\n",
+      "0    32699\n",
+      "1       87\n",
       "Name: 死亡, dtype: int64\n",
-      "0    2079\n",
-      "1       9\n",
+      "0    2276\n",
+      "1      10\n",
       "2       1\n",
       "Name: 死亡, dtype: int64\n",
-      "0    3277\n",
-      "1       8\n",
+      "0    3077\n",
+      "1       7\n",
       "Name: 死亡, dtype: int64\n"
      ]
     }
@@ -473,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
